--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   build_runner: ^2.4.7
+  card_swiper: ^3.0.1
   dio: ^5.4.0
   flutter:
     sdk: flutter
@@ -18,6 +19,7 @@ dependencies:
   json_serializable: ^6.7.1
   path_provider: ^2.1.1
   provider: ^6.1.1
+  swipe_cards: ^2.0.0+1
   time_machine: ^0.9.17
 
 dev_dependencies:
